# CursedWordsTGBot

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile.CursedWordsTgBot  bot_workspace.code-workspace  build-common-image.sh  build-docker.sh  build-local.sh  build.sh  docker-compose.ci.yml  docker-compose.yml  ervice -n 100 --no-pager  run-bot.sh  run-docker.sh  set_versions.sh  tgbot_workspace.code-workspace  token.txt
.github/workflows/: ci.yml  main.yml
CursedWordsTGBot/: CMakeLists.txt  bot_workspace.code-workspace  main.cpp  run_bot.hpp
Modules/: CMakeLists.txt
Modules/Classificator/: CMakeLists.txt  classificator.cpp  classificator.hpp  classifier.py
Modules/Logger/: CMakeLists.txt  logger.cpp  logger.hpp
Modules/Parser/: CMakeLists.txt  parser.cpp  parser.hpp
Modules/Queue/: CMakeLists.txt  queue.cpp  queue.hpp
Modules/Reactor/: CMakeLists.txt  reactor.cpp  reactor.hpp
Modules/Server/: CMakeLists.txt  server.cpp  server.h  server.hpp
Modules/SignalHandler/: CMakeLists.txt  signalhandler.cpp  signalhandler.hpp
Modules/Task/: CMakeLists.txt  task.cpp  task.hpp
Modules/Worker/: CMakeLists.txt  worker.cpp  worker.hpp
Server/: CMakeLists.txt
Task/: CMakeLists.txt  task.hpp
Tests/: CMakeLists.txt
Tests/FunctionalTests/: CMakeLists.txt
Tests/FunctionalTests/Reactor_Tests/: CMakeLists.txt  echoBotTest.cpp  echoBotTest.hpp  main.cpp  messages.txt  test_reactorsresult.cpp  test_reactorsresult.hpp
Tests/UnitTests/: CMakeLists.txt
Tests/UnitTests/Parser_Tests/: CMakeLists.txt  main.cpp  test.cpp  test.h  test.hpp
Tests/UnitTests/Queue_Tests/: CMakeLists.txt  main.cpp  multithreaded_tests.cpp  onethreaded_test.cpp  onethreaded_tests.cpp  test.cpp  test.h  test.hpp  test_threadsafequeue.cpp
Tests/UnitTests/SignalHandler_Tests/: CMakeLists.txt  main.cpp  test.cpp  test.h
Tests/UnitTests/ThreadSafeQueue_Tests/: CMakeLists.txt  main.cpp  test.cpp  test.hpp
bins/Tests/Parser_tests/: parser_tests
bins/Tests/Queue_test/: queue_test
clients/: CMakeLists.txt  client.cpp
cmake/: TgBot.cmake
common_images/: Dockerfile.base  Dockerfile.base.tar
common_images_python/: Dockerfile.python  requirements.txt
grpcClientLibrary/: CMakeLists.txt
server_grpc/: server.py
server_grpc/hf_cache/models--s-nlp--russian_toxicity_classifier/refs/: main
server_grpc/hf_cache/models--s-nlp--russian_toxicity_classifier/snapshots/0694e1f99efc08e73479e5c6f06c7bbe393aca89/: config.json  model.safetensors  tokenizer_config.json  vocab.txt
target_images/: Dockerfile.CursedWordsTgBot  Dockerfile.CursedWordsTgBot.tar
